more updates to index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,17 +34,17 @@
 
       <!-- Add your content here -->
       <!-- Styles and components can be found at https://service-manual.nhs.uk/design-system -->
-
-      
-
+      {{ actionLink({
+        "text": "View prototypes",
+        "href": "#"
+      }) }}
       <hr>
-
       <div class="nhsuk-warning-callout">
         <h3 class="nhsuk-warning-callout__label">Important</h3>
         <p>These prototypes are created rapdly and are a communication tool. Code produced in this prototype should be used in production</p>
       </div>
 
-      
+    
 
       <!-- End of content -->
 
