change of content

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,7 +41,8 @@
       <hr>
       <div class="nhsuk-warning-callout">
         <h3 class="nhsuk-warning-callout__label">Important</h3>
-        <p>These prototypes are created rapdly and are a communication tool. Code produced in this prototype should be used in production</p>
+        <p>These prototypes are created rapidly and are a communication tool.</p>
+        <p><strong>Code produced in this prototype should not be used in production</strong>.</p>
       </div>
 
     
