--- a/app/views/v2/your-details.html
+++ b/app/views/v2/your-details.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/Start">Back</a>
+  <a class="govuk-back-link" href="start">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -15,7 +15,7 @@
 
       <h1 class="govuk-heading-xl">Tell us about you</h1>
 
-      <form class="form" action="/your-employment">
+      <form class="form" action="your-dbs-number">
 
         {% from "govuk/components/input/macro.njk" import govukInput %}
 
@@ -23,19 +23,35 @@
         label: {
           text: "What is your full name?"
         },
+        classes: "govuk-input--width-20",
         id: "individual-name",
         name: "individual-name"
       }) }}
 
         {% from "govuk/components/input/macro.njk" import govukInput %}
 
-      {{ govukInput({
+        {{ govukInput({
+          label: {
+            text: "What is your National Insurance number?"
+          },
+          hint: {
+            text: "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
+          },
+          classes: "govuk-input--width-10",
+          id: "national-insurance-number",
+          name: "national-insurance-number",
+          attributes: {
+            spellcheck: "false"
+          }
+        }) }}
+
+  <!--    {{ govukInput({
         label: {
           text: "What is your DBS certificate number?"
         },
         id: "dbs-certificate-number",
         name: "dbs-certificate-number"
-      }) }}
+      }) }} -->
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
