--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,7 +17,15 @@
         These prototypes have been assembled very quick and are a communication tool which demonstrates a current understanding of how things work.
       </p>
 
-     <p><a href="start">Start prototype</a></p>
+      <hr>
+      <p><strong>Register for an Emergency Volunteer Leave certificate</strong><br>
+      <a href="v2/start">Version 2 prototype</a><br>
+      Work in progress<br>
+      </p>
+
+     <hr>
+     <p><a href="v1/start">Version 1 prototype</a><br>
+     Version of prototype assembled by NHSX</p>
 
       
     </div>
