--- a/app/views/v1/check-your-answers.html
+++ b/app/views/v1/check-your-answers.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/location">Back</a>
+  <a class="govuk-back-link" href="location">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -145,7 +145,7 @@
 
       <p>By submitting this notification you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
 
-      <form action="/confirmation" method="post" novalidate>
+      <form action="confirmation" method="post" novalidate>
 
         <input type="hidden" name="answers-checked" value="true">
 
