--- a/app/views/v1/placement-start.html
+++ b/app/views/v1/placement-start.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/placement-information">Back</a>
+  <a class="govuk-back-link" href="placement-information">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -30,7 +30,7 @@
         }
       }) }}
 
-      <form class="form" action="/check-your-answers" method="post">
+      <form class="form" action="check-your-answers" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
