--- a/app/views/v1/start.html
+++ b/app/views/v1/start.html
@@ -30,15 +30,15 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Emergency Voluntary Leave (EVL)
-  <!--      {% if serviceName %} {{ serviceName }} {% endif %} -->
+        
+  {% if serviceName %} {{ serviceName }} {% endif %} 
       </h1>
       <p>This service lets you register for an Emergency Leave certificate so that you can get paid to volunteer with a local care provider. You can use this service if you’re currently working in the health and social care profession, or have relevant experience.
-      <p>You can complete this service if you know about an open placement in your local community. The care providers and your local authority will need to approve the application before you receive a certification. You will need your certificate before you start to qualify for payment. </p>
+      <p>You can complete this service if you know about an open placement in your local community. The care providers and your local authority will need to approve the application before you receive a certificate. You will need your certificate before you start to qualify for payment. </p>
 
       <p>Registering takes around 5 minutes. You can only use this service once.</p>
 
-      <a href=/your-details role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
+      <a href=your-details role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
         Start now
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
