--- a/app/views/v1/your-employment.html
+++ b/app/views/v1/your-employment.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/your-details">Back</a>
+  <a class="govuk-back-link" href="your-details">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/location">
+      <form class="form" action="location">
 
       {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
