--- a/app/views/v2/location.html
+++ b/app/views/v2/location.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/your-details">Back</a>
+  <a class="govuk-back-link" href="your-employment">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -75,7 +75,7 @@
 
       {% endcall %}
 
-      <form class="form" action="/placement-details" method="post">
+      <form class="form" action="placement-details" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
