--- a/app/views/v2/placement-start.html
+++ b/app/views/v2/placement-start.html
@@ -30,7 +30,7 @@
         }
       }) }}
 
-      <form class="form" action="check-your-answers" method="post">
+      <form class="form" action="contact-details" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
