--- a/app/views/v2/placement-details.html
+++ b/app/views/v2/placement-details.html
@@ -49,22 +49,56 @@
 
         {{ govukInput({
           label: {
-            text: "What is the postal address of the organisation?"
-          },
-          classes: "govuk-input--width-20",
-          id: "organisation-postal-address",
-          name: "organisation-postal-address"
-        }) }}
-
-
-        {{ govukInput({
-          label: {
             text: "What is their telephone number?"
           },
           classes: "govuk-input--width-20",
           id: "organisation-telephone",
           name: "organisation-telephone"
         }) }}
+
+        <fieldset class="govuk-fieldset">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+            <h2 class="govuk-fieldset__heading">
+              What is the address for the volunteer placement?
+            </h2>
+          </legend>
+        
+          <div class="govuk-form-group">
+            <label class="govuk-label" for="address-line-1">
+              Building and street <span class="govuk-visually-hidden">line 1 of 2</span>
+            </label>
+            <input class="govuk-input" id="address-line-1" name="address-line-1" type="text" autocomplete="address-line1">
+          </div>
+        
+          <div class="govuk-form-group">
+            <label class="govuk-label" for="address-line-2">
+              <span class="govuk-visually-hidden">Building and street line 2 of 2</span>
+            </label>
+            <input class="govuk-input" id="address-line-2" name="address-line-2" type="text" autocomplete="address-line2">
+          </div>
+        
+          <div class="govuk-form-group">
+            <label class="govuk-label" for="address-town">
+              Town or city
+            </label>
+            <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="address-town" type="text" autocomplete="address-level2">
+          </div>
+        
+          <div class="govuk-form-group">
+            <label class="govuk-label" for="address-county">
+              County
+            </label>
+            <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="address-county" type="text">
+          </div>
+        
+          <div class="govuk-form-group">
+            <label class="govuk-label" for="address-postcode">
+              Postcode
+            </label>
+            <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text" autocomplete="postal-code">
+          </div>
+        
+        </fieldset>
 
 
       <form class="form" action="placement-information" method="post">
