--- a/app/views/v2/your-dbs-number.html
+++ b/app/views/v2/your-dbs-number.html
@@ -16,36 +16,53 @@
     <div class="govuk-grid-column-two-thirds">
 
 
-      <form class="form" action="provide-dbs-number">
+      <form class="form" action="your-employment">
 
-        {{ govukRadios({
-          idPrefix: "provide-dbs-number",
-          name: "provide-dbs-number",
-          fieldset: {
-            legend: {
-              text: "Do you know your DBS Certificate number?",
-              isPageHeading: true,
-              classes: "govuk-fieldset__legend--xl"
-            }
-          },
-          hint: {
-            text: "Providing your DBS certificate number now will...."
-          },
-          items: [
-            {
-              value: "dbs-yes",
-              text: "Yes"
-            },
-            {
-              value: "dbs-no",
-              text: "No"
-            }
-          ]
-        }) }}
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="how-contacted-conditional-hint">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+              <h1 class="govuk-fieldset__heading">
+                Do you know your DBS Certificate number?
+              </h1>
+            </legend>
+            <span id="how-contacted-conditional-hint" class="govuk-hint">
+              It'd be useful to provide DBS....
+            </span>
+            <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional">
+                <label class="govuk-label govuk-radios__label" for="how-contacted-conditional">
+                  Yes
+                </label>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="contact-by-email">
+                    Enter your DBS Certificate number
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
+                </div>
+        
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="how-contacted-conditional-2" name="how-contacted" type="radio" value="phone" data-aria-controls="conditional-how-contacted-conditional-2">
+                <label class="govuk-label govuk-radios__label" for="how-contacted-conditional-2">
+                  No
+                </label>
+              </div>
+              
+        
+              </div>
+             
+            </div>
+          </fieldset>
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+          <button class="govuk-button" data-module="govuk-button">Continue</button>
 
-      </form>
+        </form>
+        </div>
+
+  
 
     </div>
   </div>
