--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Emergency Voluntary Leave
+        Apply for Emergency Volunteering Leave
         
       </h1>
       <p class="govuk-lede">
@@ -18,7 +18,7 @@
       </p>
 
       <hr>
-      <p><strong>Register for an Emergency Volunteer Leave certificate</strong><br>
+      <p><strong>Apply for Emergency Volunteering Leave</strong><br>
       <a href="v2/start">Version 2 prototype</a><br>
       Work in progress<br>
       </p>
