--- a/app/views/v2/start.html
+++ b/app/views/v2/start.html
@@ -33,8 +33,11 @@
         
   {% if serviceName %} {{ serviceName }} {% endif %} 
       </h1>
-      <p>This service lets you register for an Emergency Leave certificate so that you can get paid to volunteer with a local care provider. You can use this service if you’re currently working in the health and social care profession, or have relevant experience.
-      <p>You can complete this service if you know about an open placement in your local community. The care providers and your local authority will need to approve the application before you receive a certificate. You will need your certificate before you start to qualify for payment. </p>
+
+
+      <p>You can register for an Emergency Leave certificate using this service. You can complete this service if you know about a placement in your local community.</p>
+
+      <p>The care providers and your local authority will need to approve the application before you receive a certificate. You will need your certificate before you start.      </p>
 
       <p>Registering takes around 5 minutes. You can only use this service once.</p>
 
@@ -50,11 +53,10 @@
       <p>You will need:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>the contact number and address details of the care provider</li>
-        <li>to give your employer at least 3 days notice, if employed</li>
-        <li>your DBS certificate number from a recent DBS application (last 12 months)</li>
+        <li>to know about a placement within your local community</li>
+        <li>the telephone number and email of your care provider</li>
       </ul>
-
+    <p>Ideally, you will have a DBS certificate number from a check within the last 12 months.</p>
     </div>
 
     <div class="govuk-grid-column-one-third">
