--- a/app/views/v2/your-dbs-number.html
+++ b/app/views/v2/your-dbs-number.html
@@ -22,11 +22,11 @@
           <fieldset class="govuk-fieldset" aria-describedby="how-contacted-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                Do you know your DBS Certificate number?
+                Do you know your DBS certificate number?
               </h1>
             </legend>
             <span id="how-contacted-conditional-hint" class="govuk-hint">
-              It'd be useful to provide DBS....
+              Providing your DBS certificate number could speed up the identification process
             </span>
             <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
               <div class="govuk-radios__item">
