new flow for a provider viewing volunteer information

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,7 +19,14 @@
 
       <hr>
       <br>
-
+      <h2 class="govuk-heading-l">Provider checking volunteer information</h2>
+      <p>Work in progress</p>
+    
+        {{ govukButton({
+        text: "Start prototype",
+        href: "provider/option-1/view-info-1"
+      }) }}
+      <hr>
       <h2 class="govuk-heading-l">Apply for Emergency Volunteering Leave v2</h2>
       <p>Work in progress</p>
     
