Pushed slight change to dbs check

--- a/app/views/v2/your-dbs-number.html
+++ b/app/views/v2/your-dbs-number.html
@@ -40,7 +40,7 @@
                   <label class="govuk-label" for="contact-by-email">
                     Enter your DBS Certificate number
                   </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
+                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="text" spellcheck="false">
                 </div>
         
               </div>
