--- a/app/views/v2/contact-details.html
+++ b/app/views/v2/contact-details.html
@@ -33,7 +33,7 @@
               <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="text">
             </div>
 
-            <div class="govuk-form-group">
+     <!--      <div class="govuk-form-group">
               <label class="govuk-label" for="width-20">
                 Phone number (optional)
               </label>
@@ -41,7 +41,7 @@
                 The organisation may need to contact you about the placement
               </span>
               <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="text">
-            </div>
+            </div> --> 
 
           </fieldset>
         </div>
