taken away DBS information for now

--- a/app/views/provider/option-1/view-info-1.html
+++ b/app/views/provider/option-1/view-info-1.html
@@ -35,7 +35,7 @@
           </dd>
          
         </div>
-        <div class="govuk-summary-list__row">
+     <!--  <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             DBS Certificate number
           </dt>
@@ -43,7 +43,7 @@
             189276890009
           </dd>
          
-        </div>
+        </div> --> 
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Job status
