--- a/app/views/v2/check-your-answers.html
+++ b/app/views/v2/check-your-answers.html
@@ -45,7 +45,7 @@
             </a>
           </dd>
         </div>
-        <div class="govuk-summary-list__row">
+     <!--   <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             DBS Certificate number
           </dt>
@@ -58,7 +58,7 @@
               <span class="govuk-visually-hidden">national insurance number</span>
             </a>
           </dd>
-        </div>
+        </div> -->
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Job status
