--- a/app/views/v2/your-details.html
+++ b/app/views/v2/your-details.html
@@ -15,7 +15,7 @@
 
       <h1 class="govuk-heading-xl">Tell us about you</h1>
 
-      <form class="form" action="your-dbs-number">
+      <form class="form" action="your-employment">
 
         {% from "govuk/components/input/macro.njk" import govukInput %}
 
