--- a/app/views/v2/your-employment.html
+++ b/app/views/v2/your-employment.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="your-dbs-number">Back</a>
+  <a class="govuk-back-link" href="your-details">Back</a>
 {% endblock %}
 
 {% block content %}
