--- a/app/views/v2/placement-details.html
+++ b/app/views/v2/placement-details.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Tell us about the volunteer placement.</h1>
+      <h1 class="govuk-heading-xl">Tell us about the volunteer placement</h1>
 
    
 
