updates to prototype, new design for LA included

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,6 +19,14 @@
 
       <hr>
       <br>
+      <h2 class="govuk-heading-l">Local authority approving volunteer and provider info</h2>
+      <p>Work in progress</p>
+    
+        {{ govukButton({
+        text: "Start prototype",
+        href: "local-authority/view-info-1"
+      }) }}
+      <hr>
       <h2 class="govuk-heading-l">Provider checking volunteer information</h2>
       <p>Work in progress</p>
     
