reject flow and content

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -62,6 +62,9 @@
 
             <li><a href="provider/v3/view-info-1">Provider checking volunteer information</a>
 
+              <li><a href="email-rejected">Email content for provider rejecting application</a>
+
+
             <li><a href="local-authority/v3/view-info-1">Local authority approving volunteer and provider info</a>
 
           </ol>
