--- a/app/views/provider/v3/confirmation.html
+++ b/app/views/provider/v3/confirmation.html
@@ -10,15 +10,15 @@
     <div class="govuk-grid-column-two-thirds">
 
       <div class="govuk-panel govuk-panel--confirmation">
-        <h1 class="govuk-panel__title">Details sent</h1>
+        <h1 class="govuk-panel__title">Application sent</h1>
         <div class="govuk-panel__body">
-          These details have now been sent to <strong>[name of local authority selected]</strong> for verification
-        </div>
+          The application is now with <strong>[name of local authority/health authority selected]</strong> to be checked </div>
       </div>
 
       <h2 class="govuk-heading-m">What happens next</h2>
-      <p>Good question</p>
-      
+      <p>Once [name of local authority/health authority selected] have checked the application they will either accept or decline it. If it is accepted, then you and the applicant will receive an email with the certificate.</p>
+      <p>The certificate allows the applicant to  begin their placement.</p>
+      <p>When the placement ends the applicant will be entitled to compensation. You can read more about compensation within our guidance for the Emergency Volunteering Scheme.<a href="#"> Link to GOV.UK guidance link</a></p>
 
 
     </div>
