--- a/app/views/provider/v3/rejected.html
+++ b/app/views/provider/v3/rejected.html
@@ -10,15 +10,12 @@
     <div class="govuk-grid-column-two-thirds">
 
       <div class="govuk-panel govuk-panel--confirmation">
-        <h1 class="govuk-panel__title">Details rejected</h1>
-        <div class="govuk-panel__body">
-          
-        </div>
+        <h1 class="govuk-panel__title">Application rejected</h1>
+       
       </div>
-
-      <h2 class="govuk-heading-m">What happens next</h2>
-      <p>Good question</p>
-      
+      <p><strong>What happens next</strong></p>
+      <p>You have now rejected this application. The candidate will receive an email that their application has been rejected.</p>
+      <p>If you feel the applicant is a suitable candidate but something in their application was incorrect then please get in touch with them directly and ask them to re-apply.</p>
 
 
     </div>
