placing email content into full e2e journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,14 +58,18 @@
               </details>
             </li>
   
-            <li><a href="email-provider">Email content for provider receiving email</a>
+            <li><a href="email-provider">Email to provider with a link to approve volunteer information</a>
 
             <li><a href="provider/v3/view-info-1">Provider checking volunteer information</a>
+              <li><a href="email-volunteer-rejected-by-provider">Email to volunteer they have been rejected by provider</a>
 
-              <li><a href="email-rejected">Email content for provider rejecting application</a>
+              <li><a href="email-to-LA-to-approve">Email to Local Authority (LA) to approve volunteer and provider information </a>
 
 
             <li><a href="local-authority/v3/view-info-1">Local authority approving volunteer and provider info</a>
+              <li><a href="email-to-LA-after-approval">Email to Local Authority (LA) to confirm their own approval</a>
+                <li><a href="email-to-LA-after-rejecting">Email to Local Authority (LA) to confirm their own rejection</a>
+                  <li><a href="email-to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority (LA)</a>
 
           </ol>
 <br>
