--- a/app/views/local-authority/v3/view-info-1.html
+++ b/app/views/local-authority/v3/view-info-1.html
@@ -156,19 +156,19 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste">
-            I have checked they have the right experience for the role
+            I confirm that Sarah has the necessary skills or experience for the placement
           </label>
         </div>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-            I have or I will check they are eligible to work (checked DBS)
+            I confirm that Sarah has a recent DBS certificate
           </label>
         </div>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-            This is a real placement that we need to fill
+            I can confirm this is a real placement and that the organisation I work for requires support for this placement
           </label>
         </div>
        
