--- a/app/views/v3/start.html
+++ b/app/views/v3/start.html
@@ -35,9 +35,9 @@
       </h1>
 
 
-      <p>You can register for an Emergency Leave certificate using this service. You can complete this service if you know about a placement in your local community.</p>
+      <p>You can use this service to apply for an Emergency Volunteer certificate and help your local health and social care services. You will require a certificate to receive compensation.</p>
 
-      <p>The care providers and your local authority will need to approve the application before you receive a certificate. You will need your certificate before you start.      </p>
+      <p>If you’re employed, you will need the certificate to claim income loss compensation and evidence to your employer. If you’re unemployed, you will need the certificate to claim expenses.</p>
 
       <p>Registering takes around 5 minutes. You can only use this service once.</p>
 
@@ -53,11 +53,12 @@
       <p>You will need:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>to know about a placement within your local community</li>
-        <li>the telephone number and email of your care provider</li>
+        <li>to know about a volunteering placement within your local community</li>
+        <li>the telephone number and email of your contact for the placement</li>
       </ul>
-    <p>Ideally, you will have a DBS certificate number from a check within the last 12 months.</p>
-    </div>
+      <p>Ideally, you will have a DBS certificate number from a check within the last 12 months. </p>
+      <p>There is revised guidance on new DBS checks within the guidance for the Emergency Volunteering Scheme. </p>
+  </div>
 
     <div class="govuk-grid-column-one-third">
 
