--- a/app/views/provider/v3/view-info-1.html
+++ b/app/views/provider/v3/view-info-1.html
@@ -134,6 +134,8 @@
         </div>
       </dl>
 
+      <p><strong>Please confirm the following statements:</strong></p>
+
       <div class="govuk-checkboxes">
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
