--- a/app/views/v3/confirmation.html
+++ b/app/views/v3/confirmation.html
@@ -17,15 +17,14 @@
       </div>
 
       <p>
-        We have sent you a confirmation email.
+        We've sent you a confirmation email which contains your reference number.
       </p>
 
       <h2 class="govuk-heading-m">What happens next</h2>
-      <p>We've sent you a copy of your reference number. </p>
-      <p>Your care provider will need to approve the application, they will be emailed a link.</p>
-      <p>Once the application is approved, the local authority need to approve to ensure you will get paid.</p>
-      <p><a href="https://www.gov.uk/service-manual/user-centred-design/resources/patterns/feedback-pages.html">What did you think of this service?</a> (takes 30 seconds)</p>
-
+      <p>The contact for your placement will be emailed a link to verify your application. You may want to check they have received the email if you hope to start your placement within the next 7 days.</p>
+      <p>Your local authority will then approve the application, this is required for you to receive compensation or expense repayment. </p>
+      <p>Once you have completed your placement, return to to the guidance for <a href="#">Emergency Volunteering Scheme</a> to apply for compensation. This will be ready in time for the end of your placement.
+      </p>
 
     </div>
   </div>
